@@ -1,7 +1,5 @@
 package no.unit.nva.publication.indexing;
 
-import static java.net.HttpURLConnection.HTTP_NOT_FOUND;
-import static java.net.HttpURLConnection.HTTP_OK;
 import static java.util.Objects.isNull;
 import static java.util.stream.StreamSupport.stream;
 import static no.unit.nva.expansion.ExpansionConfig.objectMapper;
@@ -13,13 +11,13 @@ import static no.unit.nva.model.testing.PublicationGenerator.randomDoi;
 import static no.unit.nva.model.testing.PublicationGenerator.randomOrganization;
 import static no.unit.nva.model.testing.PublicationGenerator.randomPublication;
 import static no.unit.nva.model.testing.PublicationGenerator.randomUri;
-import static no.unit.nva.publication.indexing.PublicationChannelGenerator.getPublicationChannelSampleJournal;
-import static no.unit.nva.publication.indexing.PublicationChannelGenerator.getPublicationChannelSamplePublisher;
+import static no.unit.nva.publication.uriretriever.FakeUriResponse.HARD_CODED_TOP_LEVEL_ORG_URI;
 import static no.unit.nva.testutils.RandomDataGenerator.randomInteger;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
 import static nva.commons.apigateway.MediaTypes.APPLICATION_JSON_LD;
-import static nva.commons.core.ioutils.IoUtils.stringFromResources;
+import static nva.commons.core.attempt.Try.attempt;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
 import static org.hamcrest.collection.IsIterableContainingInOrder.contains;
 import static org.hamcrest.core.AllOf.allOf;
@@ -29,26 +27,21 @@ import static org.hamcrest.core.IsIterableContaining.hasItems;
 import static org.hamcrest.core.IsNot.not;
 import static org.hamcrest.core.IsNull.nullValue;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import com.fasterxml.jackson.core.JsonPointer;
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.IntNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.google.common.collect.Lists;
+import com.google.common.net.MediaType;
 import java.io.IOException;
 import java.net.URI;
-import java.net.http.HttpResponse;
-import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
@@ -73,8 +66,7 @@ import no.unit.nva.model.contexttypes.Book;
 import no.unit.nva.model.contexttypes.Journal;
 import no.unit.nva.model.contexttypes.Publisher;
 import no.unit.nva.model.contexttypes.Series;
-import no.unit.nva.model.funding.Funding;
-import no.unit.nva.model.funding.FundingBuilder;
+import no.unit.nva.model.funding.ConfirmedFunding;
 import no.unit.nva.model.instancetypes.book.AcademicMonograph;
 import no.unit.nva.model.instancetypes.book.BookAnthology;
 import no.unit.nva.model.instancetypes.book.BookMonograph;
@@ -106,10 +98,14 @@ import no.unit.nva.model.testing.PublicationGenerator;
 import no.unit.nva.model.testing.PublicationInstanceBuilder;
 import no.unit.nva.publication.PublicationServiceConfig;
 import no.unit.nva.publication.external.services.UriRetriever;
+import no.unit.nva.publication.indexing.verification.FundingResult;
+import no.unit.nva.publication.indexing.verification.PublisherResult;
 import no.unit.nva.publication.uriretriever.FakeUriResponse;
 import no.unit.nva.publication.uriretriever.FakeUriRetriever;
+import nva.commons.core.Environment;
 import nva.commons.core.paths.UriWrapper;
 import org.hamcrest.Matchers;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -121,8 +117,6 @@ class ExpandedResourceTest {
     public static final String JSON_CONTRIBUTOR_ORGANIZATIONS = "/contributorOrganizations";
     public static final String JSON_PTR_ID = "/id";
     public static final String JSON_PTR_HAS_PART = "/hasPart";
-    public static final String CRISTIN_ORG_JSON = "cristin_org.json";
-    public static final String TOP_LEVEL_CRISTIN_ORG_JSON = "cristin_org_top_level.json";
     private static final String SERIES_LEVEL_JSON_PTR =
         "/entityDescription/reference/publicationContext/entityDescription/reference/publicationContext"
         + "/series/scientificValue";
@@ -136,54 +130,45 @@ class ExpandedResourceTest {
     private static final String SERIES_ID_JSON_PTR =
         "/entityDescription/reference/publicationContext/entityDescription/reference/publicationContext"
         + "/series/id";
-    private static final String PUBLISHER_NAME_JSON_PTR = "/entityDescription/reference/publicationContext/publisher"
-                                                          + "/name";
-    private static final String SERIES_NAME_JSON_PTR = "/entityDescription/reference/publicationContext/series/name";
     private static final URI HOST_URI = PublicationServiceConfig.PUBLICATION_HOST_URI;
+    private static final String API_HOST = new Environment().readEnv("API_HOST");
+    private FakeUriRetriever fakeUriRetriever;
+
+    @BeforeEach
+    void setup() {
+        this.fakeUriRetriever = FakeUriRetriever.newInstance();
+    }
 
     @Test
     void shouldReturnIndexDocumentWithValidReferenceData() throws Exception {
 
         final Publication publication = randomBookWithConfirmedPublisher();
-        final URI seriesUri = extractSeriesId(publication);
-        final URI publisherUri = extractPublisherId(publication);
-        final String publisherName = randomString();
-        final String seriesName = randomString();
-
-        final UriRetriever mockUriRetriever = mock(UriRetriever.class);
-        addPublicationChannelPublisherToMockUriRetriever(mockUriRetriever,
-                                                         seriesUri,
-                                                         seriesName,
-                                                         publisherUri,
-                                                         publisherName);
-
-        final ExpandedResource indexDocument = fromPublication(mockUriRetriever, publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        final ExpandedResource indexDocument = fromPublication(fakeUriRetriever, publication);
         final JsonNode framedResultNode = indexDocument.asJsonNode();
 
-        assertEquals(publisherUri.toString(),
-                     framedResultNode.at(PublicationJsonPointers.PUBLISHER_ID_JSON_PTR).textValue());
-        assertEquals(publisherName, framedResultNode.at(PUBLISHER_NAME_JSON_PTR).textValue());
-        assertEquals(seriesUri.toString(), framedResultNode.at(PublicationJsonPointers.SERIES_ID_JSON_PTR).textValue());
-        assertEquals(seriesName, framedResultNode.at(SERIES_NAME_JSON_PTR).textValue());
+        var publisherResultString = framedResultNode.at(PublicationJsonPointers.PUBLISHER_JSON_PTR).toString();
+        var publisher =
+            attempt(() -> objectMapper.readValue(publisherResultString, PublisherResult.class)).orElseThrow();
+
+        assertTrue(publisher.isNotEmpty());
     }
 
     @Test
     void shouldReturnIndexDocumentWithValidContributorAffiliationCountryCode() throws Exception {
-        var mockUriRetriever = mock(UriRetriever.class);
         var publication = randomPublication();
-        mockCristinOrganizationRawContentResponse(mockUriRetriever, publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        var indexDocument = fromPublication(mockUriRetriever, publication);
+        var indexDocument = fromPublication(fakeUriRetriever, publication);
         var framedResultNode = indexDocument.asJsonNode();
 
         var actualCountryCode = framedResultNode.at("/entityDescription/contributors/1/affiliations/0/countryCode")
-                                                .textValue();
+                                    .textValue();
         assertThat(actualCountryCode, is(not(nullValue())));
     }
 
     @Test
     void shouldReturnIndexDocumentWithContributorsPreviewAndCount() throws Exception {
-        var mockUriRetriever = mock(UriRetriever.class);
         var publication = randomPublication(AcademicArticle.class);
 
         var contributor1 = contributorWithSequenceAndVerificationStatus(1, NOT_VERIFIED);
@@ -197,13 +182,12 @@ class ExpandedResourceTest {
 
         publication.getEntityDescription().setContributors(contributors);
 
-        mockCristinOrganizationRawContentResponse(mockUriRetriever, publication);
-
-        var indexDocument = fromPublication(mockUriRetriever, publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        var indexDocument = fromPublication(fakeUriRetriever, publication);
         var framedResultNode = indexDocument.asJsonNode();
 
         var contributorsPreviewNode = (ArrayNode) framedResultNode.at("/entityDescription")
-                                             .at("/contributorsPreview");
+                                                      .at("/contributorsPreview");
 
         var actualContributorsPreview = stream(contributorsPreviewNode.spliterator(), false)
                                             .map(node -> objectMapper.convertValue(node, Contributor.class))
@@ -214,29 +198,28 @@ class ExpandedResourceTest {
 
     @Test
     void shouldReturnIndexDocumentWithContributorsPreviewWithNoMoreThan10Contributors() throws Exception {
-        var mockUriRetriever = mock(UriRetriever.class);
         var publication = randomPublication();
 
-        var contributors = IntStream.range(0,20).mapToObj(i ->
-            contributorWithSequenceAndVerificationStatus(randomInteger(), NOT_VERIFIED)
+        var contributors = IntStream.range(0, 20).mapToObj(i ->
+                                                               contributorWithSequenceAndVerificationStatus(
+                                                                   randomInteger(), NOT_VERIFIED)
         ).toList();
 
         publication.getEntityDescription().setContributors(contributors);
 
-        mockCristinOrganizationRawContentResponse(mockUriRetriever, publication);
-
-        var indexDocument = fromPublication(mockUriRetriever, publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        var indexDocument = fromPublication(fakeUriRetriever, publication);
         var framedResultNode = indexDocument.asJsonNode();
 
         var contributorsCountNode = (IntNode) framedResultNode.at("/entityDescription")
-                                                      .at("/contributorsCount");
+                                                  .at("/contributorsCount");
 
         var contributorsPreviewNode = (ArrayNode) framedResultNode.at("/entityDescription")
                                                       .at("/contributorsPreview");
 
         var actualContributorsPreview = stream(contributorsPreviewNode.spliterator(), false)
                                             .map(node -> objectMapper.convertValue(node, Contributor.class))
-                                            .collect(Collectors.toList());
+                                            .toList();
 
         assertThat(actualContributorsPreview.size(), is(equalTo(10)));
         assertThat(contributorsCountNode.intValue(), is(equalTo(20)));
@@ -244,15 +227,18 @@ class ExpandedResourceTest {
 
     @Test
     void shouldReturnIndexDocumentWithTopLevelOrganizationsWithTreeToRelevantAffiliation() throws Exception {
-        final var publication = randomBookWithConfirmedPublisher();
-        final var affiliationToBeExpanded = extractAffiliationsUris(publication).getFirst();
+        final var publication = randomPublication(AcademicArticle.class);
+        final var affiliationToBeExpanded = FakeUriResponse.HARD_CODED_LEVEL_3_ORG_URI;
+        var contributorAffiliatedToTopLevel = publication.getEntityDescription().getContributors().getFirst().copy()
+                                                  .withAffiliations(
+                                                      List.of(Organization.fromUri(affiliationToBeExpanded))).build();
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-        mockOrganizationResponse(affiliationToBeExpanded, mockUriRetriever);
+        publication.getEntityDescription().setContributors(List.of(contributorAffiliatedToTopLevel));
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, publication).asJsonNode();
         var topLevelNodes = (ArrayNode) framedResultNode.at(JSON_PTR_TOP_LEVEL_ORGS);
-        var topLevelForExpandedAffiliation = getTopLevel(topLevelNodes, "194.0.0.0");
+        var topLevelForExpandedAffiliation = getTopLevel(topLevelNodes, HARD_CODED_TOP_LEVEL_ORG_URI.toString());
 
         assertThat(findDeepestNestedSubUnit(topLevelForExpandedAffiliation).at(JSON_PTR_ID).textValue(),
                    is(equalTo(affiliationToBeExpanded.toString())));
@@ -261,65 +247,44 @@ class ExpandedResourceTest {
     @Test
     void shouldReturnIndexDocumentWithContributorsOrganizations() throws Exception {
         var publication = randomPublication(AcademicArticle.class);
-        var contributor1org = orgWithReadableId("contributor1org");
-        var contributor1parentOrg = orgWithReadableId("contributor1parentOrg");
-        var contributor2org = orgWithReadableId("contributor2org");
-        var contributor2parentOrg = orgWithReadableId("contributor2parentOrg");
-        var sharedGrandParent = orgWithReadableId("sharedGrandParent");
+        var contributor1org = Organization.fromUri(FakeUriResponse.HARD_CODED_LEVEL_3_ORG_URI);
+        var contributor1parentOrg = Organization.fromUri(FakeUriResponse.HARD_CODED_LEVEL_2_ORG_URI);
+        var contributor2org = Organization.fromUri(FakeUriResponse.constructCristinOrgUri("123.1.2.0"));
+        var topLevelOrg = Organization.fromUri(HARD_CODED_TOP_LEVEL_ORG_URI);
 
         var contributor1 = contributorWithOneAffiliation(contributor1org);
         var contributor2 = contributorWithOneAffiliation(contributor2org);
         publication.getEntityDescription().setContributors(List.of(contributor1, contributor2));
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-        mockOrganizationResponseWithParents(mockUriRetriever,
-                                            contributor1org,
-                                            contributor1parentOrg,
-                                            sharedGrandParent);
-        mockOrganizationResponseWithParents(mockUriRetriever,
-                                            contributor2org,
-                                            contributor2parentOrg,
-                                            sharedGrandParent);
-
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, publication).asJsonNode();
         var contributorOrganizationsNode = framedResultNode.at(JSON_CONTRIBUTOR_ORGANIZATIONS);
         var actualOrganizations = Lists.newArrayList(contributorOrganizationsNode.elements())
-                                       .stream()
-                                       .map(JsonNode::textValue)
-                                       .toList();
+                                      .stream()
+                                      .map(JsonNode::textValue)
+                                      .toList();
 
         var expectedOrganizations = Stream.of(contributor1org,
-                                              contributor2org,
                                               contributor1parentOrg,
-                                              contributor2parentOrg,
-                                              sharedGrandParent).map(Organization::getId).map(URI::toString).toArray();
+                                              topLevelOrg,
+                                              contributor2org).map(Organization::getId).map(URI::toString).toArray();
 
         assertThat(actualOrganizations, containsInAnyOrder(expectedOrganizations));
-    }
-
-    @Test
-    void shouldReturnIndexDocumentEvenIfParsingCristinOrgResponseFails() throws Exception {
-        final var publication = randomBookWithConfirmedPublisher();
-        final var affiliationToBeExpanded = extractAffiliationsUris(publication).getFirst();
-
-        final var mockUriRetriever = mock(UriRetriever.class);
-        var nonParseableResponse = randomString();
-        mockGetRawContentResponse(mockUriRetriever, affiliationToBeExpanded, nonParseableResponse);
-
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
-        assertThat(framedResultNode, is(not(nullValue())));
     }
 
     @Test
     void shouldReturnIndexDocumentWithTopLevelOrganizationWithoutHasPartsIfContributorAffiliatedWithTopLevel()
         throws Exception {
         final var publication = randomBookWithConfirmedPublisher();
-        final var affiliationToBeExpanded = extractAffiliationsUris(publication).getFirst();
+        final var affiliationToBeExpanded = HARD_CODED_TOP_LEVEL_ORG_URI;
+        var contributorAffiliatedToTopLevel = publication.getEntityDescription().getContributors().getFirst().copy()
+                                                  .withAffiliations(
+                                                      List.of(Organization.fromUri(affiliationToBeExpanded))).build();
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-        mockOrganizationResponseForTopLevelAffiliation(affiliationToBeExpanded, mockUriRetriever);
+        publication.getEntityDescription().setContributors(List.of(contributorAffiliatedToTopLevel));
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, publication).asJsonNode();
         var topLevelNodes = (ArrayNode) framedResultNode.at(JSON_PTR_TOP_LEVEL_ORGS);
         var topLevelForExpandedAffiliation = getTopLevel(topLevelNodes, affiliationToBeExpanded.toString());
 
@@ -330,18 +295,15 @@ class ExpandedResourceTest {
     @Test
     void shouldReturnIndexDocumentWithSortedContributorsByTheirSequence() throws Exception {
         final var publication = randomBookWithManyContributors();
-        final var affiliationToBeExpanded = extractAffiliationsUris(publication).getFirst();
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-        mockOrganizationResponseForTopLevelAffiliation(affiliationToBeExpanded, mockUriRetriever);
-
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, publication).asJsonNode();
         var contributorsJson = framedResultNode.at("/entityDescription/contributors");
 
         List<Contributor> contributors = objectMapper.convertValue(contributorsJson,
                                                                    objectMapper.getTypeFactory()
-                                                                               .constructCollectionType(List.class,
-                                                                                                        Contributor.class));
+                                                                       .constructCollectionType(List.class,
+                                                                                                Contributor.class));
         var sortedContributors = contributors.stream().sorted(Comparator.comparing(Contributor::getSequence)).toList();
 
         assertThat(contributors, is(equalTo(sortedContributors)));
@@ -350,10 +312,9 @@ class ExpandedResourceTest {
     @Test
     void shouldReturnIndexDocumentWithIdWhenThereIsNoEntityDescription() throws Exception {
         final var publication = randomPublicationWithoutEntityDescription();
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, publication).asJsonNode();
         var id = URI.create(framedResultNode.at(PublicationJsonPointers.ID_JSON_PTR).textValue());
 
         assertThat(id, is(not(nullValue())));
@@ -364,22 +325,13 @@ class ExpandedResourceTest {
     void shouldReturnIndexDocumentWithValidFundingSource() throws Exception {
 
         final var publication = randomBookWithConfirmedPublisher();
-        final var sourceUri0 = publication.getFundings().get(0).getSource();
-        final var sourceUri1 = publication.getFundings().get(1).getSource();
-        final var mockUriRetriever = mock(UriRetriever.class);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        var firstResponse = mockResponseWithStatusCodeAndBody(HTTP_OK, getPublicationSampleFundingSource(sourceUri0));
-
-        var secondResponse = mockResponseWithStatusCodeAndBody(HTTP_OK, getPublicationSampleFundingSource(sourceUri1));
-        when(mockUriRetriever.fetchResponse(sourceUri0, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            firstResponse));
-        when(mockUriRetriever.fetchResponse(sourceUri1, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            secondResponse));
-
-        final var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        final var framedResultNode = fromPublication(fakeUriRetriever, publication).asJsonNode();
         final var extractedSourceId = extractSourceId(framedResultNode);
 
-        assertThat(extractedSourceId, hasItems(sourceUri0, sourceUri1));
+        // TODO: Better test here?
+        assertThat(extractedSourceId.size(), is(equalTo(2)));
     }
 
     @Test
@@ -388,54 +340,40 @@ class ExpandedResourceTest {
         final var publication = randomBookWithConfirmedPublisher();
         final var sourceUri0 = publication.getFundings().get(0).getSource();
         final var sourceUri1 = publication.getFundings().get(1).getSource();
-        final var mockUriRetriever = mock(UriRetriever.class);
-        var firstResponse = mockResponseWithStatusCodeAndBody(HTTP_OK,
-                                                              getPublicationSampleFundingSourceWithoutContext(sourceUri0));
-        var secondResponse = mockResponseWithStatusCodeAndBody(HTTP_OK,
-                                                               getPublicationSampleFundingSourceWithoutContext(
-                                                                   sourceUri1));
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        when(mockUriRetriever.fetchResponse(sourceUri0, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            firstResponse));
-        when(mockUriRetriever.fetchResponse(sourceUri1, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            secondResponse));
-
-        assertHasExpectedFundings(sourceUri0, sourceUri1, fromPublication(mockUriRetriever, publication).asJsonNode());
+        assertHasExpectedFundings(sourceUri0, sourceUri1, fromPublication(fakeUriRetriever, publication).asJsonNode());
     }
 
     @Test
     void shouldExpandMultipleFundingsWithTheSameSource() throws JsonProcessingException {
         final var publication = randomBookWithConfirmedPublisher();
-        var source = randomUri();
-        publication.setFundings(List.of(fundingWithSource(source), fundingWithSource(source)));
-        final var sourceUri0 = publication.getFundings().get(0).getSource();
-        final var sourceUri1 = publication.getFundings().get(1).getSource();
-        final var mockUriRetriever = mock(UriRetriever.class);
-        var firstResponse = mockResponseWithStatusCodeAndBody(HTTP_OK,
-                                                              getPublicationSampleFundingSourceWithoutContext(sourceUri0));
-        var secondResponse = mockResponseWithStatusCodeAndBody(HTTP_OK,
-                                                               getPublicationSampleFundingSourceWithoutContext(
-                                                                   sourceUri1));
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        when(mockUriRetriever.fetchResponse(sourceUri0, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            firstResponse));
-        when(mockUriRetriever.fetchResponse(sourceUri1, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            secondResponse));
+        var expandedResource = fromPublication(fakeUriRetriever, publication).asJsonNode();
+        var type = new TypeReference<List<FundingResult>>() {
+        };
 
-        var expandedResource = fromPublication(mockUriRetriever, publication).asJsonNode();
-
-        assertTrue(expandedResource.at(JsonPointer.compile("/fundings/1/source")).has("id"));
-        assertTrue(expandedResource.at(JsonPointer.compile("/fundings/0/source")).has("id"));
+        var string = expandedResource.at("/fundings").toString();
+        var fundings = attempt(() -> objectMapper.readValue(string, type)).orElseThrow();
+        fundings.forEach(funding -> assertTrue(funding.isNotEmpty()));
     }
 
     @Test
     void shouldReturnIndexDocumentWithValidExpandedFundingSourceWhenFetchFundingReturnNotFound()
         throws JsonProcessingException {
         final var publication = randomBookWithConfirmedPublisher();
-        final var mockUriRetriever = mock(UriRetriever.class);
-        var httpResponse = mockResponseWithStatusCodeAndBody(HTTP_NOT_FOUND, randomString());
-        when(mockUriRetriever.fetchResponse(any(), anyString())).thenReturn(Optional.of(httpResponse));
-        var expandedResource = fromPublication(mockUriRetriever, publication).asJsonNode();
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        int statusCode = 404;
+
+        publication.getFundings().stream()
+            .filter(ConfirmedFunding.class::isInstance)
+            .map(ConfirmedFunding.class::cast)
+            .map(ConfirmedFunding::getSource)
+            .forEach(uri -> {
+                fakeUriRetriever.registerResponse(uri, statusCode, MediaType.ANY_APPLICATION_TYPE, "");
+            });
+        var expandedResource = fromPublication(fakeUriRetriever, publication).asJsonNode();
 
         assertTrue(expandedResource.at(JsonPointer.compile("/fundings/1/source")).has("id"));
         assertTrue(expandedResource.at(JsonPointer.compile("/fundings/0/source")).has("id"));
@@ -445,25 +383,15 @@ class ExpandedResourceTest {
     void shouldNotCreateTopLevelOrgForBlankNodes() throws Exception {
 
         final Publication publication = randomBookWithConfirmedPublisher();
-        final URI seriesUri = extractSeriesId(publication);
-        final URI publisherUri = extractPublisherId(publication);
-        final String publisherName = randomString();
-        final String seriesName = randomString();
-
-        final UriRetriever mockUriRetriever = mock(UriRetriever.class);
-        addPublicationChannelPublisherToMockUriRetriever(mockUriRetriever,
-                                                         seriesUri,
-                                                         seriesName,
-                                                         publisherUri,
-                                                         publisherName);
 
         ((Organization) publication.getEntityDescription()
-                                   .getContributors()
-                                   .getFirst()
-                                   .getAffiliations()
-                                   .getFirst()).setId(null);
+                            .getContributors()
+                            .getFirst()
+                            .getAffiliations()
+                            .getFirst()).setId(null);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
 
-        ObjectNode framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        ObjectNode framedResultNode = fromPublication(fakeUriRetriever, publication).asJsonNode();
 
         var affiliations = framedResultNode.findValues("affiliations").getFirst();
         affiliations.forEach(aff -> {
@@ -480,9 +408,8 @@ class ExpandedResourceTest {
         throws JsonProcessingException {
 
         var publication = PublicationGenerator.randomPublication(publicationInstance);
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(publication, uriRetriever);
-        var indexDocument = fromPublication(uriRetriever, publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        var indexDocument = fromPublication(fakeUriRetriever, publication);
         var json = (ObjectNode) objectMapper.readTree(indexDocument.toJsonString());
         var expectedUri = UriWrapper.fromUri(HOST_URI).addChild(publication.getIdentifier().toString()).getUri();
         var actualUri = URI.create(json.at(PublicationJsonPointers.ID_JSON_PTR).textValue());
@@ -497,9 +424,8 @@ class ExpandedResourceTest {
         Book book = extractBook(publication);
         Series series = (Series) book.getSeries();
         URI expectedSeriesUri = series.getId();
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(publication, uriRetriever);
-        ExpandedResource actualDocument = fromPublication(uriRetriever, publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        ExpandedResource actualDocument = fromPublication(fakeUriRetriever, publication);
         assertThat(actualDocument.getPublicationContextUris(), hasItems(expectedSeriesUri));
     }
 
@@ -510,9 +436,8 @@ class ExpandedResourceTest {
         Publication publication = randomJournalArticleWithConfirmedJournal();
         Journal journal = (Journal) publication.getEntityDescription().getReference().getPublicationContext();
         URI expectedJournalUri = journal.getId();
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(publication, uriRetriever);
-        ExpandedResource actualDocument = fromPublication(uriRetriever, publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        ExpandedResource actualDocument = fromPublication(fakeUriRetriever, publication);
         assertThat(actualDocument.getPublicationContextUris(), contains(expectedJournalUri));
     }
 
@@ -521,9 +446,8 @@ class ExpandedResourceTest {
         throws JsonProcessingException {
 
         Publication publication = PublicationGenerator.randomPublication(BookMonograph.class);
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(publication, uriRetriever);
-        ExpandedResource actualDocument = fromPublication(uriRetriever, publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        ExpandedResource actualDocument = fromPublication(fakeUriRetriever, publication);
         Book book = extractBook(publication);
         Series confirmedSeries = (Series) book.getSeries();
         URI expectedSeriesId = confirmedSeries.getId();
@@ -538,9 +462,8 @@ class ExpandedResourceTest {
         throws JsonProcessingException {
 
         Publication publication = PublicationGenerator.randomPublication(FeatureArticle.class);
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(publication, uriRetriever);
-        ExpandedResource actualDocument = fromPublication(uriRetriever, publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        ExpandedResource actualDocument = fromPublication(fakeUriRetriever, publication);
         Journal journal = extractJournal(publication);
         URI expectedJournalId = journal.getId();
         assertThat(actualDocument.getPublicationContextUris(), containsInAnyOrder(expectedJournalId));
@@ -550,15 +473,15 @@ class ExpandedResourceTest {
     void shouldReturnExpandedResourceWithAnthologyPublicationChannelUrisWhenPublicationIsAcademicChapter()
         throws JsonProcessingException {
         var publication = PublicationGenerator.randomPublication(AcademicChapter.class);
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(publication, uriRetriever);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
         var parentUri = (Anthology) publication.getEntityDescription().getReference().getPublicationContext();
         var bookAnthology =
-            objectMapper.readValue(uriRetriever.fetchResponse(parentUri.getId(), APPLICATION_JSON_LD.toString()).get().body(),
-                                   Publication.class);
+            objectMapper.readValue(
+                fakeUriRetriever.fetchResponse(parentUri.getId(), APPLICATION_JSON_LD.toString()).get().body(),
+                Publication.class);
         var expectedPublicationChannelIds = getPublicationContextUris(extractBook(bookAnthology));
 
-        var expandedResource = fromPublication(uriRetriever, publication);
+        var expandedResource = fromPublication(fakeUriRetriever, publication);
         var expandedResourceJsonNode = expandedResource.asJsonNode();
         var actualPublicationChannelUris = extractActualPublicationChannelUris(expandedResourceJsonNode);
         assertThat(actualPublicationChannelUris, containsInAnyOrder(expectedPublicationChannelIds.toArray()));
@@ -588,37 +511,23 @@ class ExpandedResourceTest {
     void shouldNotFailWhenThereIsNoMainTitle() throws JsonProcessingException {
 
         Publication publication = PublicationGenerator.randomPublication(BookMonograph.class);
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(publication, uriRetriever);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
         publication.getEntityDescription().setMainTitle(null);
-        assertThat(ExpandedResource.fromPublication(uriRetriever, publication), is(not(nullValue())));
+        assertThat(ExpandedResource.fromPublication(fakeUriRetriever, publication), is(not(nullValue())));
     }
 
     @Test
     void shouldNotFailWhenInputContainsAffiliationsThatAreIncomplete() throws JsonProcessingException {
         var publication = createPublicationWithEmptyAffiliations();
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(publication, uriRetriever);
-        assertDoesNotThrow(() -> ExpandedResource.fromPublication(uriRetriever, publication));
-    }
-
-    @Test
-    void shouldUseApiVersionWhenLookingUpOrganizations() throws JsonProcessingException {
-        var publication = PublicationGenerator.randomPublication();
-        var uriRetriever = mock(UriRetriever.class);
-        var orgIds = getOrgIdsForContributorAffiliations(publication);
-        ExpandedResource.fromPublication(uriRetriever, publication);
-        orgIds.forEach(orgId -> verify(uriRetriever, times(1)).getRawContent(orgId,
-                                                                             "application/ld+json; "
-                                                                             + "version=2023-05-26"));
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever);
+        assertDoesNotThrow(() -> ExpandedResource.fromPublication(fakeUriRetriever, publication));
     }
 
     @Test
     void shouldNotExpandDoiWhenIdUsedElsewhere() throws IOException {
         var bookAnthology = bookAnthologyWithDoiReferencedInAssociatedLink();
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(bookAnthology, uriRetriever);
-        var expandedResource = ExpandedResource.fromPublication(uriRetriever, bookAnthology);
+        FakeUriResponse.setupFakeForType(bookAnthology, fakeUriRetriever);
+        var expandedResource = ExpandedResource.fromPublication(fakeUriRetriever, bookAnthology);
 
         var actualDoi = expandedResource.getAllFields().get("doi");
 
@@ -629,9 +538,8 @@ class ExpandedResourceTest {
     @Test
     void shouldNotExpandHandleWhenIdUsedElsewhere() throws IOException {
         var bookAnthology = bookAnthologyWithHandleReferencedInAssociatedLink();
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(bookAnthology, uriRetriever);
-        var expandedResource = ExpandedResource.fromPublication(uriRetriever, bookAnthology);
+        FakeUriResponse.setupFakeForType(bookAnthology, fakeUriRetriever);
+        var expandedResource = ExpandedResource.fromPublication(fakeUriRetriever, bookAnthology);
 
         var actualHandle = expandedResource.getAllFields().get("handle");
 
@@ -642,9 +550,8 @@ class ExpandedResourceTest {
     @Test
     void shouldNotExpandLinkWhenIdUsedElsewhere() throws IOException {
         var bookAnthology = bookAnthologyWithLinkReferencedInAssociatedLink();
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(bookAnthology, uriRetriever);
-        var expandedResource = ExpandedResource.fromPublication(uriRetriever, bookAnthology);
+        FakeUriResponse.setupFakeForType(bookAnthology, fakeUriRetriever);
+        var expandedResource = ExpandedResource.fromPublication(fakeUriRetriever, bookAnthology);
 
         var actualLink = expandedResource.getAllFields().get("link");
 
@@ -656,9 +563,8 @@ class ExpandedResourceTest {
     void shouldReturnExpandedResourceWithAnthologyPublicationChannelLevelWhenPublicationIsAcademicChapter()
         throws IOException {
         var academicChapter = PublicationGenerator.randomPublication(AcademicChapter.class);
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(academicChapter, uriRetriever);
-        var expandedResource = fromPublication(uriRetriever, academicChapter);
+        FakeUriResponse.setupFakeForType(academicChapter, fakeUriRetriever);
+        var expandedResource = fromPublication(fakeUriRetriever, academicChapter);
         var expandedResourceJsonNode = expandedResource.asJsonNode();
         var actualSeriesLevel = expandedResourceJsonNode.at(SERIES_LEVEL_JSON_PTR).textValue();
         var actualPublisherLevel = expandedResourceJsonNode.at(PUBLISHER_LEVEL_JSON_PTR).textValue();
@@ -670,9 +576,8 @@ class ExpandedResourceTest {
     @MethodSource("validAnthologyContainersProvider")
     void shouldSetHasPartsRelationForBookAnthology(Class<?> publicationType) throws IOException {
         var bookAnthology = PublicationGenerator.randomPublication(publicationType);
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(bookAnthology, uriRetriever);
-        var expandedResource = fromPublication(uriRetriever, bookAnthology).asJsonNode();
+        FakeUriResponse.setupFakeForType(bookAnthology, fakeUriRetriever);
+        var expandedResource = fromPublication(fakeUriRetriever, bookAnthology).asJsonNode();
 
         var actualNode = expandedResource.get("joinField");
         var expectedNode = new ObjectNode(objectMapper.getNodeFactory());
@@ -686,7 +591,6 @@ class ExpandedResourceTest {
     void shouldSetPartOfRelationForAnthologyMember(Class<?> publicationType) throws IOException {
         var part = PublicationGenerator.randomPublication(publicationType);
         var publicationContext = part.getEntityDescription().getReference().getPublicationContext();
-        var fakeUriRetriever = FakeUriRetriever.newInstance();
         FakeUriResponse.setupFakeForType(part, fakeUriRetriever);
         var expandedResource = fromPublication(fakeUriRetriever, part).asJsonNode();
         var actualNode = expandedResource.get("joinField");
@@ -697,6 +601,34 @@ class ExpandedResourceTest {
         assertThat(actualNode, is(equalTo(expectedNode)));
     }
 
+    @Test
+    void shouldUseApiVersionWhenLookingUpOrganizations() throws JsonProcessingException {
+        var publication = PublicationGenerator.randomPublication();
+        var uriRetriever = FakeUriRetriever.newInstance();
+        FakeUriResponse.setupFakeForType(publication, uriRetriever);
+        var versionedType = MediaType.parse("application/ld+json; version=2023-05-26");
+        publication.getEntityDescription().getContributors().stream()
+            .map(Contributor::getAffiliations)
+            .flatMap(i -> i.stream().map(Organization.class::cast).map(Organization::getId))
+            .forEach(uri -> {
+                var responseBody = """
+                    {
+                      "@context": "https://bibsysdev.github.io/src/organization-context.json",
+                      "id": "%s",
+                      "labels": {
+                        "en": "Happy duck"
+                      }
+                    }""".formatted(uri);
+                uriRetriever.registerResponse(uri,
+                                              200,
+                                              versionedType,
+                                              responseBody);
+            });
+
+        var actual = ExpandedResource.fromPublication(uriRetriever,publication).toJsonString();
+        assertThat(actual, containsString("Happy duck"));
+    }
+
     @ParameterizedTest
     @MethodSource("validAnthologyMembersProvider")
     void shouldNotFailWhenAnthologyParentIsMissing(Class<?> publicationType)
@@ -704,13 +636,12 @@ class ExpandedResourceTest {
         var academicChapter = PublicationGenerator.randomPublication(publicationType);
         var context = (Anthology) academicChapter.getEntityDescription().getReference().getPublicationContext();
 
-        var uriRetriever = FakeUriRetriever.newInstance();
-        FakeUriResponse.setupFakeForType(academicChapter, uriRetriever);
+        FakeUriResponse.setupFakeForType(academicChapter, fakeUriRetriever);
 
         // Remove the publication context ID to simulate a publication that is missing the parent reference
         context.setId(null);
 
-        var expandedResource = fromPublication(uriRetriever, academicChapter).asJsonNode();
+        var expandedResource = fromPublication(fakeUriRetriever, academicChapter).asJsonNode();
 
         var actualNode = expandedResource.get("joinField");
         var expectedNode = new ObjectNode(objectMapper.getNodeFactory());
@@ -720,24 +651,12 @@ class ExpandedResourceTest {
         assertThat(actualNode, is(equalTo(expectedNode)));
     }
 
-    private static void mockOrganizationResponseWithParents(UriRetriever uriRetriever,
-                                                            Organization org,
-                                                            Organization parentOrg,
-                                                            Organization grandParentOrg) {
-        mockGetRawContentResponse(uriRetriever,
-                                  org.getId(),
-                                  getCristinResponseWithNestedPartOfsForOrganization(org.getId().toString(),
-                                                                                     parentOrg.getId().toString(),
-                                                                                     grandParentOrg.getId()
-                                                                                                   .toString()));
-    }
-
     private static Contributor contributorWithOneAffiliation(Organization contributor1org) {
         return new Contributor.Builder().withIdentity(new Identity.Builder().withName(randomString()).build())
-                                        .withRole(new RoleType(Role.ACTOR))
-                                        .withSequence(randomInteger(10000))
-                                        .withAffiliations(List.of(contributor1org))
-                                        .build();
+                   .withRole(new RoleType(Role.ACTOR))
+                   .withSequence(randomInteger(10000))
+                   .withAffiliations(List.of(contributor1org))
+                   .build();
     }
 
     private static Contributor contributorWithSequenceAndVerificationStatus(int sequence,
@@ -748,32 +667,21 @@ class ExpandedResourceTest {
                    .build();
     }
 
-    private static HttpResponse<String> mockResponseWithStatusCodeAndBody(int statusCode, String body) {
-        var firstResponse = mock(HttpResponse.class);
-        when(firstResponse.statusCode()).thenReturn(statusCode);
-        when(firstResponse.body()).thenReturn(body);
-        return (HttpResponse<String>) firstResponse;
-    }
-
-    private static Funding fundingWithSource(URI source) {
-        return new FundingBuilder().withId(randomUri()).withSource(source).build();
-    }
-
     private static Stream<Class<?>> validAnthologyContainersProvider() {
         return Stream.of(
-                AcademicMonograph.class,
-                NonFictionMonograph.class,
-                PopularScienceMonograph.class,
-                Textbook.class,
-                Encyclopedia.class,
-                ExhibitionCatalog.class,
-                BookAnthology.class,
-                ReportResearch.class,
-                ReportPolicy.class,
-                ReportWorkingPaper.class,
-                ReportBookOfAbstract.class,
-                ConferenceReport.class,
-                ReportBasic.class);
+            AcademicMonograph.class,
+            NonFictionMonograph.class,
+            PopularScienceMonograph.class,
+            Textbook.class,
+            Encyclopedia.class,
+            ExhibitionCatalog.class,
+            BookAnthology.class,
+            ReportResearch.class,
+            ReportPolicy.class,
+            ReportWorkingPaper.class,
+            ReportBookOfAbstract.class,
+            ConferenceReport.class,
+            ReportBasic.class);
     }
 
     private static Stream<Class<?>> validAnthologyMembersProvider() {
@@ -790,38 +698,24 @@ class ExpandedResourceTest {
 
     private static JsonNode getTopLevel(ArrayNode topLevelNodes, String topLevelOrgId) {
         return stream(topLevelNodes.spliterator(), false)
-                            .filter(node -> node.at(JSON_PTR_ID).textValue().contains(topLevelOrgId))
-                            .findFirst()
-                            .orElse(null);
-    }
-
-    private static void mockOrganizationResponse(URI affiliationToBeExpanded, UriRetriever mockUriRetriever) {
-        var mockedCristinResponse = stringFromResources(Path.of(CRISTIN_ORG_JSON))
-                                        .replace("__REPLACE_AFFILIATION_ID__", affiliationToBeExpanded.toString());
-        mockGetRawContentResponse(mockUriRetriever, affiliationToBeExpanded, mockedCristinResponse);
-    }
-
-    private static void mockOrganizationResponseForTopLevelAffiliation(URI affiliationToBeExpanded,
-                                                                       UriRetriever mockUriRetriever) {
-        var mockedCristinResponse = stringFromResources(Path.of(TOP_LEVEL_CRISTIN_ORG_JSON)).replace(
-            "__REPLACE_AFFILIATION_ID__",
-            affiliationToBeExpanded.toString());
-        mockGetRawContentResponse(mockUriRetriever, affiliationToBeExpanded, mockedCristinResponse);
+                   .filter(node -> node.at(JSON_PTR_ID).textValue().contains(topLevelOrgId))
+                   .findFirst()
+                   .orElse(null);
     }
 
     private static void mockCristinOrganizationRawContentResponse(UriRetriever mockUriRetriever,
                                                                   Publication publication) {
         publication.getEntityDescription()
-                   .getContributors()
-                   .stream()
-                   .flatMap(contributor -> contributor.getAffiliations().stream())
-                   .filter(Organization.class::isInstance)
-                   .map(Organization.class::cast)
-                   .map(Organization::getId)
-                   .forEach(id -> mockGetRawContentResponse(
-                       mockUriRetriever,
-                       id,
-                       getCristinResponseWithCountryCodeForOrganization(id.toString(), COUNTRY_CODE_NO)));
+            .getContributors()
+            .stream()
+            .flatMap(contributor -> contributor.getAffiliations().stream())
+            .filter(Organization.class::isInstance)
+            .map(Organization.class::cast)
+            .map(Organization::getId)
+            .forEach(id -> mockGetRawContentResponse(
+                mockUriRetriever,
+                id,
+                getCristinResponseWithCountryCodeForOrganization(id.toString(), COUNTRY_CODE_NO)));
     }
 
     private static void assertHasExpectedFundings(URI sourceUri0, URI sourceUri1, ObjectNode framedResultNode) {
@@ -837,12 +731,12 @@ class ExpandedResourceTest {
 
     private static Set<URI> extractSourceId(ObjectNode framedResultNode) {
         return framedResultNode.at(PublicationJsonPointers.FUNDING_SOURCE_POINTER)
-                               .findValues("source")
-                               .stream()
-                               .flatMap(node -> node.findValues("id").stream())
-                               .map(JsonNode::textValue)
-                               .map(URI::create)
-                               .collect(Collectors.toSet());
+                   .findValues("source")
+                   .stream()
+                   .flatMap(node -> node.findValues("id").stream())
+                   .map(JsonNode::textValue)
+                   .map(URI::create)
+                   .collect(Collectors.toSet());
     }
 
     private static void mockGetRawContentResponse(UriRetriever uriRetriever, URI uri, String response) {
@@ -857,25 +751,11 @@ class ExpandedResourceTest {
 
     private static Contributor createContributorsWithEmptyAffiliations(Contributor contributor) {
         return new Contributor.Builder().withIdentity(contributor.getIdentity())
-                                        .withAffiliations(List.of(new Organization()))
-                                        .withRole(contributor.getRole())
-                                        .withSequence(contributor.getSequence())
-                                        .withCorrespondingAuthor(contributor.isCorrespondingAuthor())
-                                        .build();
-    }
-
-    private static void addPublicationChannelPublisherToMockUriRetriever(UriRetriever mockUriRetriever,
-                                                                         URI journalId,
-                                                                         String journalName,
-                                                                         URI publisherId,
-                                                                         String publisherName) throws IOException {
-
-        mockGetRawContentResponse(mockUriRetriever,
-                                  journalId,
-                                  getPublicationChannelSampleJournal(journalId, journalName));
-        mockGetRawContentResponse(mockUriRetriever,
-                                  publisherId,
-                                  getPublicationChannelSamplePublisher(publisherId, publisherName));
+                   .withAffiliations(List.of(new Organization()))
+                   .withRole(contributor.getRole())
+                   .withSequence(contributor.getSequence())
+                   .withCorrespondingAuthor(contributor.isCorrespondingAuthor())
+                   .build();
     }
 
     private static String getCristinResponseWithCountryCodeForOrganization(String id, String countryCode) {
@@ -891,93 +771,26 @@ class ExpandedResourceTest {
             """.formatted(id, countryCode);
     }
 
-    private static String getCristinResponseWithNestedPartOfsForOrganization(String id,
-                                                                             String parentOrgId,
-                                                                             String topOrgId) {
-        return "{\n"
-               + "  \"@context\" : \"https://bibsysdev.github.io/src/organization-context.json\",\n"
-               + "  \"type\" : \"Organization\",\n"
-               + "  \"id\": \""
-               + id
-               + "\",\n"
-               + "  \"labels\" : {\n"
-               + "    \"en\" : \"Office of International Relations\",\n"
-               + "    \"nb\" : \"Internasjonal seksjon\"\n"
-               + "  },\n"
-               + "  \"acronym\" : \"UTD-ST-INT\",\n"
-               + "  \"country\" : \"NO\",\n"
-               + "  \"partOf\" : [ {\n"
-               + "    \"type\" : \"Organization\",\n"
-               + "    \"id\": \""
-               + parentOrgId
-               + "\",\n"
-               + "    \"partOf\" : [ {\n"
-               + "      \"type\" : \"Organization\",\n"
-               + "      \"id\": \""
-               + topOrgId
-               + "\"\n"
-               + "    } ]\n"
-               + "  } ]\n"
-               + "}";
-    }
-
-    private static String getPublicationSampleFundingSource(URI sourceId) {
-        return "{\n"
-               + "  \"@context\": {\n"
-               + "    \"@vocab\": \"https://nva.sikt.no/ontology/publication#\",\n"
-               + "    \"id\": \"@id\",\n"
-               + "    \"type\": \"@type\",\n"
-               + "    \"name\": {\n"
-               + "      \"@id\": \"label\",\n"
-               + "      \"@container\": \"@language\"\n"
-               + "    }\n"
-               + "  },\n"
-               + "  \"type\" : \"FundingSource\",\n"
-               + "  \"id\" : \""
-               + sourceId
-               + "\",\n"
-               + "  \"identifier\" : \"NFR\",\n"
-               + "  \"name\" : {\n"
-               + "    \"en\" : \"Research Council of Norway (RCN)\",\n"
-               + "    \"nb\" : \"Norges forskningsråd\"\n"
-               + "  }\n"
-               + "}";
-    }
-
-    private static String getPublicationSampleFundingSourceWithoutContext(URI sourceId) {
-        return "{\n"
-               + "  \"type\" : \"FundingSource\",\n"
-               + "  \"id\" : \""
-               + sourceId
-               + "\",\n"
-               + "  \"identifier\" : \"NFR\",\n"
-               + "  \"name\" : {\n"
-               + "    \"en\" : \"Research Council of Norway (RCN)\",\n"
-               + "    \"nb\" : \"Norges forskningsråd\"\n"
-               + "  }\n"
-               + "}";
-    }
-
     private static Stream<Class<?>> publicationInstanceProvider() {
         return PublicationInstanceBuilder.listPublicationInstanceTypes().stream();
     }
 
     private static Set<URI> getOrgIdsForContributorAffiliations(Publication publication) {
         return publication.getEntityDescription()
-                          .getContributors()
-                          .stream()
-                          .map(Contributor::getAffiliations)
-                          .map(ExpandedResourceTest::getOrgIds)
-                          .flatMap(Set::stream)
-                          .collect(Collectors.toSet());
+                   .getContributors()
+                   .stream()
+                   .map(Contributor::getAffiliations)
+                   .map(ExpandedResourceTest::getOrgIds)
+                   .flatMap(Set::stream)
+                   .collect(Collectors.toSet());
     }
 
     private static Set<URI> getOrgIds(List<Corporation> organizations) {
         return organizations.stream()
-                            .filter(Organization.class::isInstance)
-                            .map(Organization.class::cast)
-                            .map(Organization::getId)
-                            .collect(Collectors.toSet());
+                   .filter(Organization.class::isInstance)
+                   .map(Organization.class::cast)
+                   .map(Organization::getId)
+                   .collect(Collectors.toSet());
     }
 
     private static JsonNode findDeepestNestedSubUnit(JsonNode jsonNode) {
@@ -996,7 +809,8 @@ class ExpandedResourceTest {
     }
 
     private static boolean hasPartHasContent(JsonNode jsonNode) {
-        return !jsonNode.at(JSON_PTR_HAS_PART).isEmpty() || !isBlankJsonNode(jsonNode.at(JSON_PTR_HAS_PART));
+        var node = jsonNode.at(JSON_PTR_HAS_PART);
+        return !node.isMissingNode() && node.isArray() && !node.isEmpty();
     }
 
     private static boolean isBlankJsonNode(JsonNode jsonNode) {
@@ -1004,34 +818,35 @@ class ExpandedResourceTest {
     }
 
     private Organization orgWithReadableId(String readable) {
-        return new Organization.Builder().withId(URI.create(("https://example.org/" + readable))).build();
+        return Organization.fromUri(
+            UriWrapper.fromHost(API_HOST).addChild("cristin").addChild("organization").addChild(readable).getUri());
     }
 
     private Publication bookAnthologyWithDoiReferencedInAssociatedLink() {
         var doi = randomDoi();
         return PublicationGenerator.randomPublication(BookAnthology.class)
-                                   .copy()
-                                   .withDoi(doi)
-                                   .withAssociatedArtifacts(List.of(new AssociatedLink(doi, null, null)))
-                                   .build();
+                   .copy()
+                   .withDoi(doi)
+                   .withAssociatedArtifacts(List.of(new AssociatedLink(doi, null, null)))
+                   .build();
     }
 
     private Publication bookAnthologyWithHandleReferencedInAssociatedLink() {
         var handle = randomUri();
         return PublicationGenerator.randomPublication(BookAnthology.class)
-                                   .copy()
-                                   .withHandle(handle)
-                                   .withAssociatedArtifacts(List.of(new AssociatedLink(handle, null, null)))
-                                   .build();
+                   .copy()
+                   .withHandle(handle)
+                   .withAssociatedArtifacts(List.of(new AssociatedLink(handle, null, null)))
+                   .build();
     }
 
     private Publication bookAnthologyWithLinkReferencedInAssociatedLink() {
         var link = randomUri();
         return PublicationGenerator.randomPublication(BookAnthology.class)
-                                   .copy()
-                                   .withLink(link)
-                                   .withAssociatedArtifacts(List.of(new AssociatedLink(link, null, null)))
-                                   .build();
+                   .copy()
+                   .withLink(link)
+                   .withAssociatedArtifacts(List.of(new AssociatedLink(link, null, null)))
+                   .build();
     }
 
     private List<URI> getPublicationContextUris(Book book) {
@@ -1047,9 +862,9 @@ class ExpandedResourceTest {
         publication.setStatus(PUBLISHED);
         var entityDescription = publication.getEntityDescription();
         var contributors = entityDescription.getContributors()
-                                            .stream()
-                                            .map(ExpandedResourceTest::createContributorsWithEmptyAffiliations)
-                                            .toList();
+                               .stream()
+                               .map(ExpandedResourceTest::createContributorsWithEmptyAffiliations)
+                               .toList();
         entityDescription.setContributors(contributors);
         return publication;
     }
@@ -1058,32 +873,20 @@ class ExpandedResourceTest {
         return (Journal) publication.getEntityDescription().getReference().getPublicationContext();
     }
 
-    private URI extractPublisherId(Publication publication) {
-        Book book = extractBook(publication);
-        Publisher publisher = extractPublisher(book);
-        return publisher.getId();
-    }
-
     private Publisher extractPublisher(Book book) {
         return (Publisher) book.getPublisher();
     }
 
     private List<URI> extractAffiliationsUris(Publication publication) {
         return publication.getEntityDescription()
-                          .getContributors()
-                          .stream()
-                          .flatMap(contributor -> contributor.getAffiliations()
-                                                             .stream()
-                                                             .filter(Organization.class::isInstance)
-                                                             .map(Organization.class::cast)
-                                                             .map(Organization::getId))
-                          .toList();
-    }
-
-    private URI extractSeriesId(Publication publication) {
-        Book book = extractBook(publication);
-        Series confirmedSeries = (Series) book.getSeries();
-        return confirmedSeries.getId();
+                   .getContributors()
+                   .stream()
+                   .flatMap(contributor -> contributor.getAffiliations()
+                                               .stream()
+                                               .filter(Organization.class::isInstance)
+                                               .map(Organization.class::cast)
+                                               .map(Organization::getId))
+                   .toList();
     }
 
     private Book extractBook(Publication publication) {
@@ -1106,17 +909,17 @@ class ExpandedResourceTest {
 
     private Contributor randomContributor() {
         return new Contributor.Builder().withIdentity(new Identity.Builder().withName(randomString()).build())
-                                        .withRole(new RoleType(Role.ACTOR))
-                                        .withSequence(randomInteger(10000))
-                                        .withAffiliations(List.of(randomOrganization()))
-                                        .build();
+                   .withRole(new RoleType(Role.ACTOR))
+                   .withSequence(randomInteger(10000))
+                   .withAffiliations(List.of(randomOrganization()))
+                   .build();
     }
 
     private Publication randomBookWithManyContributors() {
         var publication = PublicationGenerator.randomPublication(BookMonograph.class);
         var contributions = IntStream.rangeClosed(1, 10)
-                                     .mapToObj(i -> randomContributor())
-                                     .toList();
+                                .mapToObj(i -> randomContributor())
+                                .toList();
         publication.getEntityDescription().setContributors(contributions);
         return publication;
     }
